--- a/dispenser/Dockerfile
+++ b/dispenser/Dockerfile
@@ -2,10 +2,9 @@ FROM balenalib/raspberrypi3-python:latest-build
 ENV UDEV=on
 
 RUN install_packages cron
-RUN pip3 install RPi.GPIO
+RUN pip3 install RPi.GPIO schedule
 
 COPY ./start.sh /
-COPY ./scripts/. /scripts/
 COPY ./ServoControl/. /ServoControl/
 
 RUN chmod a+x /start.sh
