--- a/dispenser/Dockerfile.template
+++ b/dispenser/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM balenalib/generic-amd64-python:latest-build
+FROM balenalib/%%BALENA_MACHINE_NAME%%-python:latest-build
 ENV UDEV=on
 WORKDIR /usr/app
 
