--- a/dispenser/Dockerfile
+++ b/dispenser/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /usr/app
 COPY ./requirements.txt .
 COPY ./src/. ./src/
 
-RUN install_packages python3-opencv
+# RUN install_packages libgl1-mesa-glx python3-opencv
 RUN pip3 install -r requirements.txt
 
 WORKDIR /usr/app/src
