--- a/dispenser/Dockerfile.raspberrypi3
+++ b/dispenser/Dockerfile.raspberrypi3
@@ -5,8 +5,9 @@ WORKDIR /usr/app
 COPY ./requirements.txt .
 COPY ./src/. ./src/
 
+# RUN install_packages libgl1-mesa-glx python3-opencv
 RUN pip3 install -r requirements.txt
 
 WORKDIR /usr/app/src
-#CMD ["python3", "run.py"]
+# CMD ["python3", "run.py"]
 CMD ["gunicorn", "--bind", "0.0.0.0:80", "-w", "1", "run:app"]
