--- a/dispenser/Dockerfile.raspberrypi3
+++ b/dispenser/Dockerfile.raspberrypi3
@@ -5,7 +5,7 @@ WORKDIR /usr/app
 COPY ./requirements.txt .
 COPY ./src/. ./src/
 
-RUN install_packages libgl1-mesa-glx cmake
+RUN install_packages ffmpeg v4l-utils
 RUN pip3 install -r requirements.txt
 
 WORKDIR /usr/app/src
