--- a/dispenser/requirements.txt
+++ b/dispenser/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 packaging==23.2
 pytz==2023.3.post1
+requests==2.31.0
 RPi.GPIO==0.7.1
 schedule==1.2.1
 six==1.16.0
