--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ volumes:
   pictures:
 
 services:
-  pet-food-dispenser:
+  food-dispenser:
     build: ./dispenser
-    container_name: "pet-food-dispenser"
+    container_name: "food-dispenser"
     restart: "unless-stopped"
     privileged: true
     volumes:
